--- a/style.css
+++ b/style.css
@@ -1,98 +1,126 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@500;700&display=swap");
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 :root {
   --sky: #31c3bd;
-  --skyHover: #65e9e4;
+  --skyLight: #65e9e4;
   --orange: #f2b137;
-  --orangeHover: #ffc860;
+  --orangeLight: #ffc860;
   --darkBg: #1a2a33;
   --bg: #1f3641;
-  --light: #a8bfc9;
-  --lightHover: #dbe8ed;
+  --silver: #a8bfc9;
+  --light: #dbe8ed;
 }
-
+/* general section */
+html {
+  font-size: 62.5%;
+}
 body {
-  width: 100vw;
-  height: 100vh;
   font-family: "Outfit", sans-serif;
   background-color: var(--darkBg);
-  display: flex;
-  align-items: center;
-  justify-content: content;
+  font-style: normal;
+  height: 100vh;
 }
-
-/* general classes*/
-.title {
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 20.16px;
-  letter-spacing: 1px;
-}
-/* general classes*/
-
+/* styles of home section */
 #home {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
-
-.home-header {
-  display: flex;
-  align-items: center;
-  column-gap: 8.23px;
+.home-header img, .buttons img {
+  width: 3.2rem;
+  height: 3.2rem;
 }
-
 .home-header img {
-  width: 32px;
+  margin: 0 0.387rem;
 }
-
-.panel {
-  width: 327px;
-  background-color: var(--bg);
-  padding: 24px 24px 30px 24px;
-  box-shadow: inset 0px -8px 0px #10212a;
-  border-radius: 15px;
-  margin-top: 32px;
-  text-align: center;
-}
-
-.header-title {
-  color: var(--light);
-}
-
-.buttons {
-  width: 100%;
-  padding: 10px;
+.home-panel {
+  max-width: 32.7rem;
+  max-height: 20.5rem;
+  margin: 3.2rem 0;
   display: flex;
-  margin-top: 24px;
-  background-color: var(--darkBg);
-  border-radius: 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: var(--bg);
+  box-shadow: inset 0rem -0.8rem 0rem #10212A;
+  border-radius: 1.5rem;
+  padding: 2.4rem 2.4rem 3rem 2.4rem;
+}
+.header-title {
+  font-weight: 700;
+  font-size: 1.6rem;
+  line-height: 2rem;
+  letter-spacing: 0.1rem;
+  color: var(--silver);
+}
+.buttons {
+  margin: 2.4rem 0 1.7rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--darkBg);
+  border-radius: 1rem;
+  padding: 0.9rem 0.8rem;
 }
 
-.btn-box {
-  width: 50%;
-  height: 100%;
-  border-radius: 10px;
-  border: none;
-  background-color: transparent;
+#button-o {
+  background-color: var(--silver);
 }
 
-.x-icon,
-.o-icon {
-  transform: scale(0.7);
+.buttons div {
+  height: 5.4rem;
+  padding: 1.1rem 0;
+  width: 13.2rem;
+  border-radius: 1rem;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
 }
 
-.active {
-  background-color: var(--light);
+.notice {
+  font-weight: 500;
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  letter-spacing: 0.0875rem;
+  color: var(--silver);
+  mix-blend-mode: normal;
+  opacity: 0.5;
 }
-
-.active svg path {
-  fill: var(--darkBg);
+.vs-button {
+  width: 32.7rem;
+  height: 5.6rem;
+  border-radius: 1.5rem;
+  font-weight: 700;
+  font-size: 1.6rem;
+  line-height: 2rem;
+  text-align: center;
+  letter-spacing: 0.1px;
+  color: var(--darkBg);
+  padding: 1.4rem 0 2.2rem 0;
+  cursor: pointer;
 }
+.game-vs-spu {
+  background: var(--orange);
+  box-shadow: inset 0px -8px 0px #CC8B13;
+  margin-bottom: 1.6rem;
+}
+.game-vs-spu:hover {
+  background-color: var(--orangeLight);
+  transition: all 0.1s ease-out;
+}
+.game-vs-player {
+  background: #31C3BD;
+  box-shadow: inset 0px -8px 0px #118C87;
+}
+.game-vs-player:hover {
+  background-color: var(--skyLight);
+  transition: all 0.1s ease-out;
+}
+.home {
+  display: none;
+}
+/* styles of home section */
+/* styles of board section */
