--- a/responsive.css
+++ b/responsive.css
@@ -87,7 +87,8 @@
     }
     .o-takes h2, 
     .x-takes h2,
-    .tied h2 {
+    .tied h2,
+    .restart-board h3 {
         font-size: 4rem;
         line-height: 5rem;
         letter-spacing: 0.25rem;
@@ -95,24 +96,20 @@
     .quit-or-next {
         margin: 3.1rem 0 4.5rem 0;
     }
-
-
-
-
-
-
-
-
-
-
+    /* styles of restart section */
+    .restart-board h3 {
+        margin: 6.7rem 0 3.1rem 0;
+    }
+    .restart-buttons {
+        margin-bottom: 6.6rem;
+    }
 
 }
+
+
 @media only screen and (min-width: 1440px) {
     /* styling of home section */
     .vs-button {
         letter-spacing: 0.125px;
     }
-
-     
-
 }
