--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   font-style: normal;
   height: 100vh;
 }
-#home, #board, #result {
+#home, #board, #result, #restart {
   width: 100%;
   height: 100%;
   display: flex;
@@ -232,7 +232,7 @@ body {
 }
 /* styles of board section */
 /* styles of result section */
-.result-board {
+.result-board, .restart-board {
   width: 100%;
   background-color: var(--bg);
   display: flex;
@@ -258,7 +258,8 @@ body {
 }
 .o-takes h2, 
 .x-takes h2,
-.tied h2 {
+.tied h2,
+.restart-board h3 {
   font-weight: 700;
   font-size: 2.4rem;
   line-height: 3rem;
@@ -277,7 +278,8 @@ body {
 .quit-or-next {
   margin: 2.4rem 0 4.8rem 0;
 }
-.quit-or-next button {
+.quit-or-next button,
+.restart-buttons button {
   font-size: 1.6rem;
   line-height: 2rem;
   font-weight: 700;
@@ -286,7 +288,7 @@ body {
   color: var(--darkBg);
   cursor: pointer;
 }
-#quit {
+#quit,#no {
   width: 7.6rem;
   height: 5.2rem;
   background: var(--silver);
@@ -294,11 +296,11 @@ body {
   border-radius: 1rem;
   margin: 0 0.8rem;
 }
-#quit:hover {
+#quit:hover, #no:hover {
   background-color: var(--light);
   transition: all 0.1s ease-out;
 }
-#next {
+#next, #yes {
   width: 14.6rem;
   height: 5.2rem;
   background: var(--orange);
@@ -306,11 +308,31 @@ body {
   border-radius: 1rem;
   margin: 0 0.8rem;
 }
-#next:hover {
+#next:hover, #yes:hover {
   background-color: var(--orangeLight);
   transition: all 0.1s ease-out;
 }
+#result {
+  display: none;
+}
 /* styles of result section */
+/* styles of restart section */
+.restart-board h3 {
+  color: var(--silver);
+  margin: 6.1rem 0 2.4rem 0;
+}
+.restart-buttons {
+  margin-bottom: 6.1rem;
+}
+
+#no {
+  width: 13.9rem;
+  height: 5.2rem;
+}
+#yes {
+  width: 15.1rem;
+  height: 5.2rem;
+}
 
 
 
