--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ body {
   font-style: normal;
   height: 100vh;
 }
+#home {
+  position: relative;
+}
 #home, #board, #result, #restart {
   width: 100%;
   height: 100%;
@@ -248,9 +251,9 @@ body {
   letter-spacing: 0.125rem;
 }
 
-/* #board {
+#board {
   display: none;
-} */
+}
 /* styles of board section */
 /* styles of result section */
 .result-board, .restart-board {
@@ -334,6 +337,9 @@ body {
   transition: all 0.1s ease-out;
 }
 #result {
+  position: absolute;
+  top: 0;
+  left: 0;
   display: none;
 }
 /* styles of result section */
